--- a/work/toward-driver/build.gradle
+++ b/work/toward-driver/build.gradle
@@ -4,13 +4,9 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
-        
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:3.6.1'
     }
 }
 
@@ -18,7 +14,13 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+    }
+}
+
+subprojects {
+    repositories {
+        mavenCentral()
+        maven { url 'https://devrepo.kakao.com/nexus/content/groups/public/' }
     }
 }
 
